--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.18",
+    "@mui/material-next": "^6.0.0-alpha.110",
+    "@tanstack/react-query": "^5.8.7",
     "and": "^0.0.3",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
-    "flowbite": "^2.2.0",
-    "flowbite-react": "^0.6.4",
+    "flowbite-react": "^0.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -24,10 +26,12 @@
     "react-helmet-async": "^2.0.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
