--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^6.20.0",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
-    "sweetalert": "^2.1.2"
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.8.4",
