--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
     "@mui/icons-material": "^5.14.18",
     "@mui/material-next": "^6.0.0-alpha.110",
     "@tanstack/react-query": "^5.8.7",
